force-app/main/default/objects/Event__c/fields/Average_Sponsorship_per_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Average_Sponsorship_per_Attendee__c</fullName>
    <formula>IF(
  Total_Confirmed_Attendees__c = 0,
  0,
  Total_Sponsorship_Amount__c / Total_Confirmed_Attendees__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Sponsorship per Attendee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>