force-app/main/default/objects/Event__c/fields/Total_Confirmed_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_Confirmed_Attendees__c</fullName>
    <label>Total Confirmed Attendees</label>
    <summaryForeignKey>Attendee__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>