force-app/main/default/objects/Event__c/fields/Total_Sponsorship_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Sponsorship_Amount__c</fullName>
    <label>Total Sponsorship Amount</label>
    <summarizedField>Sponsor__c.Sponsorship_Amount__c</summarizedField>
    <summaryForeignKey>Sponsor__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>