force-app/main/default/objects/Event__c/validationRules/No_Completed_Status_For_Future_Event.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Completed_Status_For_Future_Event</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Event_Status__c, &quot;Completed&quot;) &amp;&amp; Event_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Event_Status__c</errorDisplayField>
    <errorMessage>You cannot mark an Event as Completed if the Event Date is in the future.</errorMessage>
</ValidationRule>